# baby-rsi

./: .envrc  .gitignore  01_system_architecture.md  02_research_operating_model.md  03_agent_roles.md  04_experiment_lifecycle.md  07_model_providers_and_tiers.md  10_repo_structure.md  AGENTS.md  CLAUDE.md  README.md  flake.nix  mise.toml  pyproject.toml
config/: tier0.chip.yaml  tier0.life_science.yaml  tier0.local.yaml  tier0.math.yaml  tier1.cheap_frontier.yaml  tier1.chip.yaml  tier1.frontier.yaml  tier1.life_science.yaml  tier1.math.yaml  tier2.governed.yaml
docs/: 00_principles.md  01_system_architecture.md  05_evaluation_and_safety_gates.md  06_research_memory_schema.md  07_model_providers_and_tiers.md  08_frontier_prototype_architecture.md  09_local_testbed_architecture.md  10_repo_structure.md  11_risks_and_controls.md  12_references.md  13_self_improvement_loop.md  14_project_retrospective.md  15_scale_cost_model.md  16_low_cost_validation_plan.md  17_operational_pilot_plan.md  18_generalizing_to_sciences.md  19_drug_discovery_testing_deployment_plan.md  implementation_status.md  operating_guide.md  session_tutorial.md
goal_prompts/: goal_01_project_scaffold.md  goal_02_code_improver_loop.md  goal_04_eval_and_safety_gates.md  goal_06_local_training_autoresearch.md  goal_07_provider_abstraction.md
prompts/: .gitkeep  code_improver.md  evaluation.md  hypothesis.md  implementation.md  interpretation.md  literature.md  memory_curator.md  meta_research.md  safety.md  training_improver.md
runs/: .gitkeep
tests/: test_agents.py  test_archive.py  test_backends.py  test_budget.py  test_chip_pack.py  test_cli.py  test_controller.py  test_docs_check.py  test_evaluator.py  test_external_experiment.py  test_gates.py  test_governance.py  test_import.py  test_life_science_pack.py  test_math_pack.py  test_memory.py  test_meta.py  test_model_client.py  test_model_training.py  test_orchestrator.py  test_packs.py  test_pilot.py  test_plane_isolation.py  test_pricing_audit.py  test_provider_ops.py  (+9 more)
(+305 files in other folders)
