[project]
name = "siro"
version = "0.1.0"
description = "Bounded, auditable self-improving research organization testbed."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
# Tier 0 is fully local/offline: the only runtime dependency is Pydantic for
# explicit schemas. Provider SDKs (anthropic/openai) are added in Goal 07.
dependencies = [
    "pydantic>=2.7",
]

[project.scripts]
siro = "siro.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/siro"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
src = ["src", "tests"]
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]  # import sorting
