[project]
name = "siro"
version = "0.1.0"
description = "Bounded, auditable self-improving research organization testbed."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
# Tier 0 stays dependency-light: Pydantic for explicit schemas, PyYAML to read the
# tier/provider config (Goal 07). The frontier provider backends (anthropic/openai)
# talk to the REST endpoints through the stdlib HTTP layer in `providers/_http.py`
# rather than vendor SDKs — fewer deps, one auditable egress chokepoint, and the whole
# provider layer stays exercisable fully offline via an injected transport.
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0.3",
]

[project.scripts]
siro = "siro.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/siro"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
src = ["src", "tests"]
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]  # import sorting
